--- a/Genealogy.WebApplication/Views/FSFilm/_Configure.json
+++ b/Genealogy.WebApplication/Views/FSFilm/_Configure.json
@@ -1,24 +1,24 @@
 {
 	"CustomViewModels": [
 		{
-			"Id": "ListadoRecursos",
+			"Id": "ListadoFSFilm",
 			"ViewType": 8,
-			"Title": "Recursos",
+			"Title": "FSFilm",
 			"SubTitle": "Listado",
-			"ControllerName": "Recursos",
+			"ControllerName": "FSFilm",
 			"ActionName": "Index",
 			"ViewName": "Index",
 			"ViewPath": "~/Views/Shared/Index.cshtml",
 			"PartialViewName": "_List",
-			"PartialViewPath": "~/Views/Recursos/_List.cshtml",
+			"PartialViewPath": "~/Views/FSFilm/_List.cshtml",
 			"UploadFile": false,
 			"IsTableView": true,
 			"TableView": {
-				"IdTable": "dtRecursos",
-				"ControllerName": "Recursos",
+				"IdTable": "dtFSFilm",
+				"ControllerName": "FSFilm",
 				"ActionName": "List",
 				"TableAjaxAction": "List",
-				"TableScript": "~/Views/Recursos/_ListScriptConfigure.cshtml",
+				"TableScript": "~/Views/FSFilm/_ListScriptConfigure.cshtml",
 				"EnableServerSide": false,
 				"HasPagination": true,
 				"HasOrdering": true,
@@ -27,41 +27,41 @@
 			}
 		},
 		{
-			"Id": "CrearRecursos",
-			"ViewType": 5,
+			"Id": "CrearFSFilm",
+			"ViewType": 8,
 			"Title": "Creación del registro",
-			"ControllerName": "Recursos",
+			"ControllerName": "FSFilm",
 			"ActionName": "Create",
 			"ViewName": "Modal",
 			"ViewPath": "~/Views/Shared/Modals/Modal.cshtml",
 			"PartialViewName": "_Edit",
-			"PartialViewPath": "~/Views/Recursos/_Edit.cshtml",
+			"PartialViewPath": "~/Views/FSFilm/_Edit.cshtml",
 			"UploadFile": false,
 			"IsTableView": false
 		},
 		{
-			"Id": "EditarRecursos",
-			"ViewType": 5,
+			"Id": "EditarFSFilm",
+			"ViewType": 8,
 			"Title": "Edición del registro",
-			"ControllerName": "Recursos",
+			"ControllerName": "FSFilm",
 			"ActionName": "Edit",
 			"ViewName": "Modal",
 			"ViewPath": "~/Views/Shared/Modals/Modal.cshtml",
 			"PartialViewName": "_Edit",
-			"PartialViewPath": "~/Views/Recursos/_Edit.cshtml",
+			"PartialViewPath": "~/Views/FSFilm/_Edit.cshtml",
 			"UploadFile": false,
 			"IsTableView": false
 		},
 		{
-			"Id": "DetalleRecursos",
-			"ViewType": 5,
+			"Id": "DetalleFSFilm",
+			"ViewType": 8,
 			"Title": "Detalle del registro",
-			"ControllerName": "Recursos",
+			"ControllerName": "FSFilm",
 			"ActionName": "Details",
 			"ViewName": "ModalDetails",
 			"ViewPath": "~/Views/Shared/Modals/ModalDetails.cshtml",
 			"PartialViewName": "_Edit",
-			"PartialViewPath": "~/Views/Recursos/_Edit.cshtml",
+			"PartialViewPath": "~/Views/FSFilm/_Edit.cshtml",
 			"UploadFile": false,
 			"IsTableView": false
 		}
