--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,4 @@ velocist.WebApplication/Properties/launchSettings.json
 /Genealogy.Api/Settings/appsettings.json
 /Genealogy.Api/appsettings.Development.json
 /Genealogy.Api/appsettings.json
+/Genealogy.WebApplication/Settings/appsettings.json
